[package]
name = "auth-actix"
version = "0.1.0"
authors = ["Nicolas <nicolaseven76@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
futures = "0.3.8"
jsonwebtoken = "7.2.0"
serde = {version = "1.0", features = ["derive"] }
futures-util = "0.3.8"
serde_json = "1.0.60"